err/psychopy-ext.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psychopy_ext'...
Listing './lib/python3.5/site-packages/psychopy_ext/demos'...
Listing './lib/python3.5/site-packages/psychopy_ext/demos/scripts'...
Compiling './lib/python3.5/site-packages/psychopy_ext/demos/scripts/fmri.py'...
***   File "./lib/python3.5/site-packages/psychopy_ext/demos/scripts/fmri.py", line 86
    print 'downloading fmri data (%s bytes) to %s' % (file_size, self.paths['root'])
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/psychopy_ext/demos/scripts/main.py'...
***   File "./lib/python3.5/site-packages/psychopy_ext/demos/scripts/main.py", line 283
    print agg_acc
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/psychopy_ext/demos/scripts/mouse_resp.py'...
***   File "./lib/python3.5/site-packages/psychopy_ext/demos/scripts/mouse_resp.py", line 294
    print agg_acc
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/psychopy_ext/demos/scripts/perclearn.py'...
***   File "./lib/python3.5/site-packages/psychopy_ext/demos/scripts/perclearn.py", line 592
    print 'Data will be saved in %s' % self.datafile.filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/psychopy_ext/demos/scripts/staircase.py'...
***   File "./lib/python3.5/site-packages/psychopy_ext/demos/scripts/staircase.py", line 216
    print 'Data will be saved in %s' % self.datafile.filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/psychopy_ext/tests'...
Listing './lib/python3.5/site-packages/psychopy_ext-0.6.0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
